--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* HEADER */
 header{
   background-color: #fff;
 }
@@ -28,6 +29,8 @@ header{
   color: #fff;
 }
 
+
+/* HERO */
 .hero{
 background-color: #252420;
 color: #FFFFFF;
@@ -59,6 +62,8 @@ letter-spacing: 0.5px;
   letter-spacing: 0.5px;
 }
 
+
+/* FEATURES */
 .features-heading{
   font-style: normal;
   font-weight: 700;
@@ -96,6 +101,8 @@ letter-spacing: 0.5px;
 color: #000;
 }
 
+
+/* DISCOUNT */
 .discount{
   background-color: #252420;
 color: #FFFFFF;
