--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,9 @@ header{
   display: flex;
   align-items: center;
   justify-content: space-around;
+  border-top: 5px solid #FF7500;
+  padding-top: 16px;
+  padding-bottom: 16px;
 }
 
 .logo-link{
@@ -40,6 +43,7 @@ header{
   list-style: none;
   display: flex;
   justify-content: space-between;
+  padding: 0;
 }
 
 
@@ -71,6 +75,8 @@ header{
   text-decoration: none;
   color: #fff;
   transition: opacity 0.4s ease;
+  padding: 12px 24px;
+  border-radius: 4px;
 }
 
 .main-button:hover{
@@ -94,10 +100,15 @@ header{
   width: 390px;
 }
 
+.hero img{
+  border-radius: 8px;
+}
+
 .orange-line{
   width: 80px;
   height: 3px;
   background-color: #ff7500;
+  border: opx;
 }
 
 .hero-heading{
@@ -108,6 +119,11 @@ header{
 
 
 /* FEATURES */
+.features{
+  padding-top: 210px;
+  padding-bottom: 210px;
+}
+
 
 .features-heading{
   font-family: "Roboto Condensed", "Roboto", sans-serif;
@@ -120,6 +136,7 @@ header{
   display: flex;
   list-style: none;
   justify-content: space-evenly;
+  padding: 0;
 }
 
 .feature{
@@ -130,6 +147,10 @@ header{
   width: 100px;
   height: 100px;
   background-color: rgba(255, 117, 0, 0.2);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .feature-title{
@@ -151,6 +172,11 @@ header{
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  border-radius: 12px;
+}
+
+.discount img{
+  border-radius: 12px;
 }
 
 .discount-content{
@@ -179,6 +205,7 @@ header{
 
 .site-footer-socialmedias{
   display: flex;
+  padding: 0;
 }
 
 .site-footer-socialmedias a{
@@ -195,12 +222,14 @@ header{
 
 .site-footer ul{
   list-style: none;
+
 }
 
 .site-footer-divider{
   width: 1100px;
   height: 2px;
   background-color: #000;
+  border: opx;
 }
 
 .site-footer-low{
@@ -211,6 +240,8 @@ header{
 .site-footer-links{
   width: 224px;
   line-height: 19px;
+  padding: 0;
+
 }
 
 
